# mcPytorch

./: ._third_party  .dockerignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  README_MACA.md  build_torch_cuda.sh  build_variables.bzl  full_rebuild.sh  makefile.project.mk  project.mk  pytest.ini  rebuild_maca.sh  requirements-noarm.txt  requirements-perf.txt  requirements-test.txt  requirements.txt  setup.py  test_rcpf_fix.py
c10/: CMakeLists.txt
c10/benchmark/: CMakeLists.txt
c10/core/: DispatchKey.h  DynamicCast.h  TensorOptions.h
c10/cuda/: CMakeLists.txt  CUDAAllocatorConfig.cpp  CUDACachingAllocator.cpp  CUDACachingAllocator.h  CUDAFunctions.cpp  CUDAMiscFunctions.cpp  CUDAStream.cpp  driver_api.cpp  driver_api.h  memory_tool_check.cu  memory_tool_check.h
c10/macros/: Macros.h
c10/test/: CMakeLists.txt
c10/util/: C++17.h  Half-inl.h  Half.h  floating_point_utils.h
caffe2/: CMakeLists.txt
caffe2/perfkernels/: CMakeLists.txt
cmake/: Codegen.cmake  Dependencies.cmake  Summary.cmake
cmake/Modules/: FindBLAS.cmake  FindCUDAToolkit.cmake  FindNCCL.cmake
cmake/public/: cuda.cmake  mkl.cmake
docs/cpp/: requirements.txt
functorch/: CMakeLists.txt
functorch/docs/: requirements.txt
maca_samples/amp/: README.md  bert_amp.py  requirements.txt  run_bert_amp.sh  run_bert_amp_null_hardware.sh
maca_samples/bert/: README.md  config_util.py  modeling.py  run_bert.py  run_bert.sh  run_bert_null_hardware.sh  util.py
maca_samples/bert_ddp/: README.md  run_bert_ddp.py  run_bert_ddp.sh  run_bert_ddp_null_hardware.sh
maca_samples/bert_large_finetune/: run_bert_convergence.py  run_bert_convergence_amp.py
maca_samples/cpp_extension_cuda_demo/: README.md  cuda_device.cpp  cuda_extension.cpp  cuda_extension.cu  cudnn_extension.cpp  headers.h  run_cpp_extension_cuda_demo.sh  setup.py  test_cpp_extension_cuda.py
maca_samples/dlrm/: README.md  dlrm_data_generater.py  dlrm_module.py  run_dlrm.py  run_dlrm.sh  run_dlrm_null_hardware.sh
maca_samples/libtorch_demo/: CMakeLists.txt  README.md  libtorch_demo.cpp  run_libtorch_demo.sh
maca_samples/resnet50/: README.md  resnet50_module.py  run_resnet50.py  run_resnet50.sh  run_resnet50_c500_chip.sh  run_resnet50_null_hardware.sh
maca_samples/resnet50_amp/: resnet50_amp.py  run_resnet50_amp.sh
maca_samples/resnet50_ddp/: resnet50_module.py  run_resnet50_ddp.py  run_resnet50_ddp.sh  run_resnet50_ddp_null_hardware.sh
maca_samples/resnet50_imagenet/: README.md  config_dataset_path.py  resnet50_imagenet.py
maca_samples/resnet50_ngc/: configs.yml  launch.py  main.py
maca_samples/yolov5/: README.md  requirements.txt  run_yolov5.sh  run_yolov5_null_hardware.sh  train.py
maca_tests/: run_aten_test.sh  run_bert_all_test_save.sh  run_bert_all_test_save_daily.sh  run_bert_all_test_verify_batch1.sh  run_bert_all_test_verify_batch2.sh  run_bert_all_test_verify_batch4.sh  run_bert_all_test_verify_daily.sh  run_c10_test.sh  run_libtorch_cuda_size_test.sh  run_pynet.sh  run_pytest.sh  run_samples.sh  run_sbatch_job.sh  test_AdaptiveAveragePooling.py  test_AdaptiveAveragePooling3d.py  test_AdaptiveMaxPooling2d.py  test_AdaptiveMaxPooling3d.py  test_AddAllDataType.py  test_AveragePool2d.py  test_AveragePool3d.py  test_Broadcast.py  test_Bucketization.py  test_CrossEntropyLoss.py  test_DilatedMaxPool2d.py  test_DilatedMaxPool3d.py  test_DistanceKernel.py  test_Dot.py  test_Dot_BHalf.py  test_Dot_Half.py  test_FractionalMaxPool2d.py  test_FractionalMaxPool3d.py  test_Matmul_BHalf.py  test_Matmul_Batch_BHalf.py  test_Matmul_Batch_Half.py  test_Matmul_Complex.py  test_Matmul_Half.py  test_MaxUnpooling.py  test_MultiMarginLoss.py  test_Mv.py  test_Optimization.py  (+149 more)
maca_tests/bert/: test_bert_Add.py  test_bert_Arange.py  test_bert_Contiguous.py  test_bert_DivideScalar.py  test_bert_Dropout.py  test_bert_Dropout_Large.py  test_bert_Embedding.py  test_bert_Expand.py  test_bert_Gelu.py  test_bert_LayerNorm.py  test_bert_LayerNorm_BWW.py  test_bert_Linear.py  test_bert_Linear_simple.py  test_bert_Matmul.py  test_bert_Matmul_BW.py  test_bert_Matmul_simple.py  test_bert_Permute.py  test_bert_Softmax.py  test_bert_Tanh.py  (+5 more)
maca_tests/libtorch/: CMakeLists.txt  build_libtorch.sh
maca_tests/libtorch/test_api/: CMakeLists.txt
maca_tools/: BUCK.oss  build_and_run.sh  build_and_run_impl.sh  maca_version_chip.txt  maca_version_cmodel.txt  mail_names.txt  run_jenkins.sh  run_tests.sh  utils.sh
test/: common_util.py  parse_case_name.py  run_doctests.sh  run_maca_pytest.sh  run_maca_runtime_cpp_test.sh  run_maca_runtime_test.sh  run_pytest_maca_daily.sh  run_runtest.sh  run_runtest_nightly.sh  run_test.py  test_cuda.py  test_cuda_maca.py  test_expanded_weights.py  test_jit_cuda_fuser.py  test_maca_cuda.py  test_nn.py  test_nn_fp32.py  test_nn_weekly.py  test_ops.py  test_python_dispatch.py  test_spectral_ops.py  test_testing.py  test_torch.py  test_torch_segment0.py  test_torch_segment1.py  test_torch_segment2.py  test_torch_segment3.py  test_torch_segment4.py  test_torch_segment5.py  test_torch_segment6.py  test_torch_segment7.py
test/cpp/c10d/: CMakeLists.txt
test_report/: cpp_maca_runtime_case.csv  test_c10d_gloo_pass_checkin.csv  test_c10d_gloo_pass_weekly.csv  test_c10d_mccl_pass_checkin.csv  test_c10d_mccl_pass_weekly.csv  test_cuda_maca_pass.csv  test_nn_TestNNDeviceTypeCUDA_conv_fp32.csv  test_nn_TestNNDeviceTypeCUDA_pass.csv  test_nn_weekly_all_pass.csv  test_onnx_opset_pass.csv  test_onnx_shape_inference_pass.csv  test_optim_case.csv  test_pipe_pass.csv  test_reductions_case_pass.csv  test_reductions_case_pass_cuda.csv  test_spectral_ops.csv  test_stash_pop_pass.csv  test_torch_TestDevicePrecisionCUDA.csv  test_torch_TestTorchDeviceTypeCUDA_pass.csv  test_torch_TestVitalSignsCudaCUDA.csv  test_torch_segment0.csv  test_torch_segment1.csv  test_torch_segment2.csv  test_torch_segment3.csv  test_torch_segment4.csv  test_torch_segment5.csv  test_torch_segment6.csv  test_torch_segment7.csv  test_verify_skippables_pass.csv
tools/: generate_torch_version.py
torch/: CMakeLists.txt  __init__.py  _utils_internal.py  hub.py
(+739 files in other folders)
